infra/k8s/review-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: review
          image: ryoeishimaura/review:latest
---
apiVersion: v1
kind: Service
metadata:
  name: review-clusterip-srv
spec:
  selector:
    app: review
  type: ClusterIP
  ports:
    - name: review
      protocol: TCP
      port: 8001
      targetPort: 8001
