infra/k8s/review-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-nodeport-srv
spec:
  type: NodePort
  selector:
    app: review
  ports:
    - name: review
      protocol: TCP
      port: 8001
      targetPort: 8001
