infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cinefreaks.com
      http:
        paths:
          - path: /users
            backend:
              serviceName: user-clusterip-srv
              servicePort: 8000
          - path: /reviews
            backend:
              serviceName: review-clusterip-srv
              servicePort: 8001
          - path: /auth
            backend:
              serviceName: auth-clusterip-srv
              servicePort: 8002
